design_challenges_01/collectError/20190009/11_error.txt
11.c: In function ‘ssu_signal’:
11.c:7:1: error: expected ‘;’ before ‘}’ token
 }
 ^
11.c: In function ‘main’:
11.c:20:7: warning: implicit declaration of function ‘getpid’ [-Wimplicit-function-declaration]
  kill(getpid(),SIGUSR1);
       ^
11.c:23:10: warning: implicit declaration of function ‘fork’ [-Wimplicit-function-declaration]
  if((pid=fork()) < 0){
          ^
